Revert "revert: replace ELK layout back to Dagre"
This reverts commit 4b9179913c2cc3020e42cc64879d036dfcb83bbf.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "antd": "^6.3.0",
     "axios": "^1.13.5",
     "dagre": "^0.8.5",
-"react": "^19.2.0",
+    "elkjs": "^0.11.0",
+    "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
